Copy and paste project files to new fs-starter template

--- a/server/package.json
+++ b/server/package.json
@@ -3,7 +3,8 @@
   "main": "app/index.js",
   "type": "module",
   "scripts": {
-    "start": "nodemon --watch app"
+    "start": "nodemon --watch app",
+    "seed": "node app/db/seeds.js"
   },
   "devDependencies": {
     "eslint": "^8.0.1",
